Fixed the path for the frontEnd Dockerfile

--- a/frontEnd/Dockerfile
+++ b/frontEnd/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:alpine
 
-COPY . /usr/share/nginx/frontend
+COPY . /usr/share/nginx/html
 
-WORKDIR /usr/share/nginx/frontend
+WORKDIR /usr/share/nginx/html
 
 EXPOSE 80
