--- a/backEnd/Dockerfile
+++ b/backEnd/Dockerfile
@@ -1,2 +1,9 @@
-FROM golang:1.18
+FROM golang:latest
 
+RUN mkdir /app 
+ADD . /app
+WORKDIR /app
+RUN go get -d
+RUN go build -o main .
+CMD ["/app/main"]
+EXPOSE 8080
