--- a/backEnd/Dockerfile
+++ b/backEnd/Dockerfile
@@ -1,10 +1,9 @@
-FROM golang:latest
+FROM golang:latest as web
 RUN apt-get update && \
     apt-get -y upgrade
 RUN apt install qpdf -y
-RUN mkdir /app 
-ADD . /app
 WORKDIR /app
+COPY . /app
 RUN go get -d
 RUN go build -o main .
 CMD ["/app/main"]
