File upload feature DONE🚀 #9
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/backEnd/Dockerfile
+++ b/backEnd/Dockerfile
@@ -5,6 +5,6 @@ RUN apt install qpdf -y
 WORKDIR /app
 COPY . /app
 RUN go get -d
-RUN go build -o main .
-CMD ["/app/main"]
+RUN go build
+CMD ["./backend"]
 EXPOSE 8080
