--- a/backEnd/Dockerfile
+++ b/backEnd/Dockerfile
@@ -5,6 +5,6 @@ RUN apt install qpdf -y
 WORKDIR /app
 COPY . /app
 RUN go get -d
-RUN go build
+RUN go build -o backend
 CMD ["./backend"]
 EXPOSE 8080
