--- a/.github/workflows/go-checks.yml
+++ b/.github/workflows/go-checks.yml
@@ -2,9 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ Heroku, main ]
+    branches: [ Heroku ]
   pull_request:
-    branches: [ main, Heroku ]
+    branches: [ Heroku ]
 
 jobs:
 
