Added 🧪 Testing [+] Port testing
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -39,5 +39,7 @@ jobs:
         cd backEnd/
         go build -v ./...
 
-    # - name: Test
-    #   run: go test -v ./...
+    - name: Test
+      run: |
+        cd backEnd/
+        go test -v ./...
