--- a/cluster/pdf-editor-tool/Chart.yaml
+++ b/cluster/pdf-editor-tool/Chart.yaml
@@ -22,3 +22,7 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
+
+maintainers:
+  - name: Dipankar Das
+    email: dipsonu10@hotmail.com
