--- a/cluster/pdf-editor-tool/templates/service.yaml
+++ b/cluster/pdf-editor-tool/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "pdf-editor-tool.fullname" . }}
-  labels:
-    {{- include "pdf-editor-tool.labels" . | nindent 4 }}
+  name: expose-frontend
+  namespace: {{ .Values.namespace.dev }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+      targetPort: 8080
   selector:
-    {{- include "pdf-editor-tool.selectorLabels" . | nindent 4 }}
+    web: pdf-editor
