--- a/cluster/pdf-editor-tool/values.yaml
+++ b/cluster/pdf-editor-tool/values.yaml
@@ -2,26 +2,32 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount:
+  dev: 2
+  prod: 5
+
+namespace:
+  dev: pdf11
+  prod: pdf-editor
 
 image:
-  repository: nginx
-  pullPolicy: IfNotPresent
+  repository: dipugodocker/pdf-editor
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: ":beta" # for the beta version
 
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+# imagePullSecrets: []
+# nameOverride: ""
+# fullnameOverride: ""
 
-serviceAccount:
+# serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  # create: true
   # Annotations to add to the service account
-  annotations: {}
+  # annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  # name: ""
 
 podAnnotations: {}
 
@@ -37,21 +43,21 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
-  port: 80
+  type: NodePort
+  port: 9000
 
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
+# ingress:
+#   enabled: false
+#   className: ""
+#   annotations: {}
+#     # kubernetes.io/ingress.class: nginx
+#     # kubernetes.io/tls-acme: "true"
+#   hosts:
+#     - host: chart-example.local
+#       paths:
+#         - path: /
+#           pathType: ImplementationSpecific
+#   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
