--- a/cluster/pdf-editor-helm/Chart.yaml
+++ b/cluster/pdf-editor-helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: pdf-editor-tool
+name: pdf-editor-helm
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
