Added the beta for the pdf-editor-tool

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -43,3 +43,5 @@ jobs:
       run: |
         cd backEnd/
         go test -v ./...
+
+# https://pdf-editor-beta.herokuapp.com/ for the beta release going to add a workflow
