--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -50,7 +50,12 @@ jobs:
     - name: Comment Checkout
       uses: NejcZdovc/comment-pr@v1
       with:
-        file: "PRcommenter.md"
+        message: |
+          # Preview for the App
+          📱🚀🥳
+          Provider | Status | Link
+          -|-|-
+          ![Heroku](https://img.shields.io/badge/heroku-%23430098.svg?style=for-the-badge&logo=heroku&logoColor=white) | ✅ | https://pdf-editor-beta.herokuapp.com/
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
