Try the heroku deploy

--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -39,6 +39,29 @@ jobs:
         cd backEnd/
         port=8080
         docker build . --file Dockerfile --tag pdf-editor:$(date +%s)
+    
+  heroku-preview:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Login to Heroku Container registry
+      env: 
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: heroku container:login 
+    - name: Build and push
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: |
+        cd backEnd/ 
+        heroku create -a ${{ secrets.HEROKU_APP_NAME }}
+        heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web 
+    - name: Release
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: |
+        cd backEnd/
+        heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web 
+
 # heroku container:login
 # heroku create -a <Application name>
 # heroku container:push web -a <Application name>
