--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -40,3 +40,25 @@ jobs:
         cd backEnd/
         port=8080
         docker build . --file Dockerfile --tag pdf-editor:$(date +%s)
+
+  heroku-deploy:
+    needs: [docker_build]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Login to Heroku Container registry
+      env: 
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: heroku container:login 
+    - name: Build and push
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: |
+        cd backEnd/ 
+        heroku container:push -a ${{ secrets.HEROKU_APP_PROD_NAME }} web 
+    - name: Release
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: |
+        cd backEnd/
+        heroku container:release -a ${{ secrets.HEROKU_APP_PROD_NAME }} web 
