--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -41,6 +41,24 @@ jobs:
         port=8080
         docker build . --file Dockerfile --tag pdf-editor:$(date +%s)
 
+  docker_new_release:
+    
+    needs: [docker_build]
+
+    runs-on: ubuntu-latest
+    env:
+      SUPER_SECRET: ${{ secrets.DOCKER_PASS }}
+    steps:
+    - uses: actions/checkout@v3
+    - name: Publish the Docker image
+      run: |
+        cd backEnd/
+        docker login -u dipugodocker -p "$SUPER_SECRET"
+        docker build . --file Dockerfile --tag dipugodocker/pdf-editor:0.5v
+        docker build . --file Dockerfile --tag dipugodocker/pdf-editor:latest
+        docker push dipugodocker/pdf-editor:0.5v
+        docker push dipugodocker/pdf-editor:latest
+
   heroku-deploy:
     needs: [docker_build]
     runs-on: ubuntu-latest
