--- a/backEnd/Dockerfile
+++ b/backEnd/Dockerfile
@@ -2,6 +2,7 @@ FROM golang:latest
 RUN apt-get update && \
     apt-get -y upgrade
 RUN apt install qpdf -y
+RUN apt auto-remove curl -y
 WORKDIR /app
 COPY . /app
 RUN go get -d
