Fixed and added the configMap
Added the configMap

--- a/cluster/pdf-editor-helm/templates/deployment.yaml
+++ b/cluster/pdf-editor-helm/templates/deployment.yaml
@@ -19,6 +19,12 @@ spec:
       containers:
         - name: pdf-editor
           image: {{ .Values.image.repository }}{{ .Values.image.tag }}
+          env:
+          - name: PORT
+            valueFrom:
+              configMapKeyRef:
+                name: pdf-config
+                key: PORT
           resources:
             requests:
                 memory: "50Mi"
@@ -29,8 +35,8 @@ spec:
           livenessProbe:
             httpGet:
               path: /
-              port: 8080 # as we are not specifiing the $PORT so default is 8080
+              port: 5680 # as we are not specifiing the $PORT so default is 8080
           ports:
-            - containerPort: 8080
+            - containerPort: 5680
           imagePullPolicy: {{ .Values.image.pullPolicy }}
 ...
