--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -54,12 +54,11 @@ jobs:
       run: |
         cd backEnd/
         docker login -u dipugodocker -p "$SUPER_SECRET"
-        docker build . --file Dockerfile --tag dipugodocker/pdf-editor:0.5-rc
+        docker build . --file Dockerfile --tag dipugodocker/pdf-editor:0.$(($(date +%m) + 1))-rc
         docker build . --file Dockerfile --tag dipugodocker/pdf-editor:latest
-        docker push dipugodocker/pdf-editor:0.5-rc
+        docker push dipugodocker/pdf-editor:0.$(($(date +%m) + 1))-rc
         docker push dipugodocker/pdf-editor:latest
-
-  heroku-deploy:
+  heroku-preview:
     needs: [docker_build]
     runs-on: ubuntu-latest
     steps:
@@ -73,10 +72,10 @@ jobs:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: |
         cd backEnd/ 
-        heroku container:push -a ${{ secrets.HEROKU_APP_PROD_NAME }} web 
+        heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web 
     - name: Release
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: |
         cd backEnd/
-        heroku container:release -a ${{ secrets.HEROKU_APP_PROD_NAME }} web 
+        heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web 
