New preview url

--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -74,7 +74,7 @@ jobs:
           📱🚀🥳
           Provider | Status | Link
           -|-|-
-          ![Heroku](https://img.shields.io/badge/heroku-%23430098.svg?style=for-the-badge&logo=heroku&logoColor=white) | ✅ | https://pdf-editor.herokuapp.com/
+          ![Heroku](https://img.shields.io/badge/heroku-%23430098.svg?style=for-the-badge&logo=heroku&logoColor=white) | ✅ | https://pdf-web.herokuapp.com/
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
