--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -4,6 +4,12 @@ on:
   schedule:
     # Monthly release at 12'o clock
     - cron: "0 12 1 * *"
+  workflow_dispatch:
+    inputs:
+      version:
+        description: Version(Optional)
+        default: v1.0.0
+        required: false
 
 jobs:
   
