--- a/backEnd/Dockerfile
+++ b/backEnd/Dockerfile
@@ -1,4 +1,18 @@
-FROM golang:latest
+FROM golang:1.18.2-buster as dev
+RUN apt update
+RUN apt install qpdf -y
+WORKDIR /app
+
+
+FROM golang:1.18.2-buster as test
+RUN apt-get update
+RUN apt install qpdf -y
+WORKDIR /app
+COPY . /app
+RUN go get -d
+ENTRYPOINT ["go", "test", "."]
+
+FROM golang:1.18.2-buster as prod
 RUN apt-get update && \
     apt-get -y upgrade
 RUN apt install qpdf -y
@@ -6,7 +20,7 @@ RUN apt auto-remove curl -y
 WORKDIR /app
 COPY . /app
 RUN go get -d
+RUN rm -rf uploads/
 RUN go build -o backend
 CMD ["./backend"]
 EXPOSE ${PORT}
-# TODO: Multistaged for prod and dev
