--- a/cluster/pdf-editor-kustomize/prod/app.yml
+++ b/cluster/pdf-editor-kustomize/prod/app.yml
@@ -4,6 +4,7 @@ metadata:
   name: pdf-editor-web
   labels:
     web: pdf-editor
+  namespace: pdf-editor
 spec:
   replicas: 5
   selector:
@@ -17,7 +18,7 @@ spec:
     spec:
       containers:
         - name: pdf-editor
-          image: dipugodocker/pdf-editor:0.5v
+          image: dipugodocker/pdf-editor:0.5v@sha256:f854d0e98f486466ef808f2e42e15a2cd1db942c270a6a70c2c911c2599a9b25
           env:
           - name: PORT
             valueFrom:
