--- a/cluster/CD.yaml
+++ b/cluster/CD.yaml
@@ -7,11 +7,11 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/dipankardas011/PDF-Editor/'
-    path: cluster/pdf-editor-kustomize/dev
+    path: cluster/pdf-editor-kustomize/prod
     targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: pdf
+    namespace: pdf-editor
   syncPolicy:
     syncOptions:
       - CreateNamespace=true      # to create the namaspace if not exsists
