--- a/cluster/artifact/index.yaml
+++ b/cluster/artifact/index.yaml
@@ -3,9 +3,9 @@ entries:
   pdf-editor-helm:
   - apiVersion: v2
     appVersion: 1.16.0
-    created: "2022-05-09T23:09:57.9010255+05:30"
-    description: A Helm chart for PDF editor
-    digest: 5e0f500d7d2119688239823c93a5c1050ed56e5b0ccc2de45d698eea2a24118e
+    created: "2022-05-15T19:35:43.076318+05:30"
+    description: A Helm chart for Kubernetes
+    digest: d7fb189271b51961cfe9697f8c80730b83b856a159655fcc7891dfb8f2ba04e5
     maintainers:
     - email: dipsonu10@hotmail.com
       name: Dipankar Das
@@ -14,4 +14,4 @@ entries:
     urls:
     - pdf-editor-helm-0.5.0.tgz
     version: 0.5.0
-generated: "2022-05-09T23:09:57.899004+05:30"
+generated: "2022-05-15T19:35:43.0753082+05:30"
