--- a/cluster/pdf-editor-helm/templates/service.yaml
+++ b/cluster/pdf-editor-helm/templates/service.yaml
@@ -7,6 +7,6 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 5680
+      targetPort: {{ .Values.portContainer }}
   selector:
     web: pdf-editor
