--- a/cluster/pdf-editor-kustomize/prod/app.yml
+++ b/cluster/pdf-editor-kustomize/prod/app.yml
@@ -33,9 +33,15 @@ spec:
               memory: "400Mi"
               cpu: "500m"
           livenessProbe:
-            httpGet:
-              path: /
-              port: 5680 # as we are not specifiing the $PORT so default is 8080
+            tcpSocket:
+              port: 5680
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          readinessProbe:
+            tcpSocket:
+              port: 5680
+            initialDelaySeconds: 5
+            periodSeconds: 10
           ports:
             - containerPort: 5680
           imagePullPolicy: Always
