--- a/.github/workflows/argoCD.yaml
+++ b/.github/workflows/argoCD.yaml
@@ -12,6 +12,7 @@ env:
 jobs:
   ArgoCDPolicyCheck:
     runs-on: ubuntu-latest
+    environment: pdf-editor-tool
 
     steps:
       - name: Checkout
@@ -25,6 +26,7 @@ jobs:
 
   HelmPolicyCheck:
     runs-on: ubuntu-latest
+    environment: pdf-editor-tool
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -37,6 +39,7 @@ jobs:
           helmArguments: '--values cluster/pdf-editor-helm/values.yaml'
   KcustomizePolicyCheck:
     runs-on: ubuntu-latest
+    environment: pdf-editor-tool
     steps:
       - name: Checkout
         uses: actions/checkout@v2
