--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -16,6 +16,7 @@ jobs:
   docker_new_release:
     
     runs-on: ubuntu-latest
+    environment: pdf-editor-tool
     env:
       SUPER_SECRET: ${{ secrets.DOCKER_PASS }}
     steps:
@@ -30,6 +31,7 @@ jobs:
 
   heroku-deploy:
     needs: [docker_new_release]
+    environment: pdf-editor-tool
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
