--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -7,7 +7,7 @@ jobs:
   golang_build:
       
     runs-on: ubuntu-latest
-    environment: pdf-editor-tool
+    environment: testing
     
     steps:
     - uses: actions/checkout@v3
@@ -32,7 +32,7 @@ jobs:
     needs: [golang_build]
 
     runs-on: ubuntu-latest
-    environment: pdf-editor-tool
+    environment: testing
 
     steps:
     - uses: actions/checkout@v3
@@ -45,7 +45,7 @@ jobs:
   heroku-preview:
     needs: [docker_build]
     runs-on: ubuntu-latest
-    environment: pdf-editor-tool
+    environment: preview
     steps:
     - uses: actions/checkout@v1
     - name: Login to Heroku Container registry
@@ -68,7 +68,6 @@ jobs:
   preview:
     needs: [heroku-preview, docker_build, golang_build]
     runs-on: ubuntu-latest
-    environment: pdf-editor-tool
     steps:
     - name: Comment Checkout
       uses: NejcZdovc/comment-pr@v1
