--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -8,7 +8,7 @@ jobs:
   golang_build:
       
     runs-on: ubuntu-latest
-    environment: pdf-editor-tool
+    environment: testing
     
     steps:
     - uses: actions/checkout@v3
@@ -33,7 +33,7 @@ jobs:
     needs: [golang_build]
 
     runs-on: ubuntu-latest
-    environment: pdf-editor-tool
+    environment: testing
 
     steps:
     - uses: actions/checkout@v3
@@ -48,7 +48,7 @@ jobs:
     needs: [docker_build]
 
     runs-on: ubuntu-latest
-    environment: pdf-editor-tool
+    environment: preview
     env:
       SUPER_SECRET: ${{ secrets.DOCKER_PASS }}
     steps:
@@ -64,7 +64,7 @@ jobs:
   heroku-preview:
     needs: [docker_build]
     runs-on: ubuntu-latest
-    environment: pdf-editor-tool
+    environment: preview
     steps:
     - uses: actions/checkout@v1
     - name: Login to Heroku Container registry
