--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,16 +1,16 @@
-FROM golang:1.18-bullseye as dev
-RUN apt update
-RUN apt install qpdf -y
-WORKDIR /app
+# FROM golang:1.18-bullseye as dev
+# RUN apt update
+# RUN apt install qpdf -y
+# WORKDIR /app
 
 
-FROM golang:1.18-bullseye as test
-RUN apt-get update
-RUN apt install qpdf -y
-WORKDIR /app
-COPY . /app
-RUN go get -d
-ENTRYPOINT ["go", "test", "."]
+# FROM golang:1.18-bullseye as test
+# RUN apt-get update
+# RUN apt install qpdf -y
+# WORKDIR /app
+# COPY . /app
+# RUN go get -d
+# ENTRYPOINT ["go", "test", "."]
 
 FROM golang:1.18-bullseye as prod
 RUN apt-get update && \
@@ -23,4 +23,5 @@ RUN go get -d
 RUN rm -rf uploads/
 RUN go build -o backend
 CMD ["./backend"]
-EXPOSE ${PORT}
+# EXPOSE ${PORT}
+EXPOSE 80
