--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -1,7 +1,9 @@
-FROM nginx:alpine
-
+FROM golang:1.18-alpine
 LABEL MAINTAINER="dipankar das <dipsonu10@hotmail.com>"
-
-COPY . /usr/share/nginx/html/
-
+RUN apk add curl
+WORKDIR /app
+COPY . /app
+RUN go get -d
+RUN go build -o frontend
+CMD ["./frontend"]
 EXPOSE 80
