--- a/deploy/cluster/backend/pv.yml
+++ b/deploy/cluster/backend/pv.yml
@@ -8,6 +8,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+  storageClassName: standard
   resources:
     requests:
-      storage: 100Mi
+      storage: 50Mi
