--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,8 +10,11 @@
   "author": "Dipankar Das",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "child_process": "^1.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   }
 }
