Manual merged the main <-> microserviceK8s
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 src/frontend/node_modules
 src/frontend/package-lock.json
+*.pdf
+IAC/AWS/.terraform
+IAC/AWS/.terraform.lock.hcl
+IAC/AWS/terraform.tfstate.backup
+IAC/AWS/terraform.tfstate
